...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="Full Name"
                app:boxBackgroundColor="#FFFFFF">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
...
                android:layout_marginTop="32dp"
                android:backgroundTint="#00695C"
                android:text="SAVE CHANGES"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete_profile"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_my_profile"
                android:textColor="#0B162C"
...
