...

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/logopartdisplayonly" />

    <LinearLayout
        android:id="@+id/userbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
...
